NA - Fix overflow

--- a/styles/baseModel.css
+++ b/styles/baseModel.css
@@ -6,10 +6,6 @@ body.ship-focus .default-content-wrapper {
   max-width: 100%;
 }
 
-/* body.ship-focus .default-content-wrapper p:not(p ~ p) {
-  margin: 0 -130px;
-} */
-
 /* stylelint-disable-next-line no-descending-specificity */
 body.ship-focus .default-content-wrapper h1 + p {
   max-height: 100vh;
@@ -24,10 +20,9 @@ body.ship-focus .default-content-wrapper .main-group img {
   object-fit: cover;
 }
 
-
 body.ship-focus .default-content-wrapper .main-group > h1:first-child {
   position: absolute;
-  right: 0;
+  left: 30%;
   margin: 64px auto 0;
   word-break: keep-all;
   word-spacing: 9999px;
@@ -37,7 +32,7 @@ body.ship-focus .default-content-wrapper .main-group > h1:first-child {
   text-transform: uppercase;
   transform: skew(40deg);
   line-height: 150px;
-  width: 60%;
+  width: 55%;
   text-shadow: 0 0 64px white;
 }
 
